--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile '~/.gitignore_global'
 
+# Ignore database files for SQLite
+# TODO: Remove this!!!!
+# db/migrate/development.sqlite3
+
 # Ignore bundler config.
 /.bundle
 
