--- a/package.json
+++ b/package.json
@@ -1,17 +1,14 @@
 {
-  "name": "adnat",
+  "name": "react-webpack-rails-tutorial",
+  "version": "0.0.1",
   "private": true,
-  "dependencies": {
-    "@rails/actioncable": "^6.0.0",
-    "@rails/activestorage": "^6.0.0",
-    "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "5.4.3",
-    "turbolinks": "^5.2.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+  "engines": {
+    "node": "6.9.0",
+    "npm": "4.1.1"
   },
-  "version": "0.1.0",
-  "devDependencies": {
-    "webpack-dev-server": "^3"
+  "scripts": {
+    "postinstall": "cd client && yarn install",
+    "rails-server": "echo 'visit http://localhost:3000/hello_world' && foreman start -f Procfile.dev",
+    "test": "rspec"
   }
 }
